Package_Tools/include-C/sodium/inarbeit/h/randombytes.h


#ifndef randombytes_H
#define randombytes_H

#include <stddef.h>
#include <stdint.h>

#include <sys/types.h>

#include "export.h"

#ifdef __cplusplus
# ifdef __GNUC__
#  pragma GCC diagnostic ignored "-Wlong-long"
# endif
extern "C" {
#endif

typedef struct randombytes_implementation {
    const char *(*implementation_name)(void); /* required */
    uint32_t    (*random)(void);              /* required */
    void        (*stir)(void);                /* optional */
    uint32_t    (*uniform)(const uint32_t upper_bound); /* optional, a default implementation will be used if NULL */
    void        (*buf)(void * const buf, const size_t size); /* required */
    int         (*close)(void);               /* optional */
} randombytes_implementation;

#define randombytes_BYTES_MAX SODIUM_MIN(SODIUM_SIZE_MAX, 0xffffffffUL)

#define randombytes_SEEDBYTES 32U
extern
size_t randombytes_seedbytes(void);

extern
void randombytes_buf(void * const buf, const size_t size)
     ;

extern
void randombytes_buf_deterministic(void * const buf, const size_t size,
                                   const unsigned char seed[randombytes_SEEDBYTES])
     ;

extern
uint32_t randombytes_random(void);

extern
uint32_t randombytes_uniform(const uint32_t upper_bound);

extern
void randombytes_stir(void);

extern
int randombytes_close(void);

extern
int randombytes_set_implementation(randombytes_implementation *impl)
     ;

extern
const char *randombytes_implementation_name(void);

/* -- NaCl compatibility interface -- */

extern
void randombytes(unsigned char * const buf, const unsigned long long buf_len)
     ;

#ifdef __cplusplus
}
#endif

#endif